# DATA_5000

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ECG_Reconstruction_10min.pptx  ECG_Reconstruction_FINAL.pptx  ECG_Reconstruction_Final.pptx  ECG_Reconstruction_Presentation.pptx  ECG_Reconstruction_Presentation_v2.pptx  README.md  environment.yml  presentation_slides.aux  presentation_slides.nav  presentation_slides.tex  presentation_slides.toc  requirements.txt  run_training.py
ecg-reconstruction/: .gitignore  README.md  compile_presentation.sh  download_log.txt  download_missing.txt  presentation_slides.aux  presentation_slides.nav  presentation_slides.out  presentation_slides.tex  presentation_slides.toc  pyproject.toml  requirements.txt  run_training.py  train.sh
ecg-reconstruction/data/: data_modules.py  generate_test_data.py  get_data.py
ecg-reconstruction/data/test_data/: metadata.csv
ecg-reconstruction/docs/: PROJECT_REPORT.aux  PROJECT_REPORT.bbl  PROJECT_REPORT.blg  PROJECT_REPORT.out  comment.cut  references.bib
ecg-reconstruction/models/physics_fix_v1/: config.json
ecg-reconstruction/models/ptbxl_100_records/: config.json
ecg-reconstruction/models/ptbxl_2000_records/: config.json  training_history.json
ecg-reconstruction/models/run_20251202_004755/: config.json
ecg-reconstruction/notebooks/: 01_data_exploration.ipynb
ecg-reconstruction/scripts/: download_ptb_xl.py  eda_analysis.py  generate_presentation_plots.py  quick_eval.py  test_training.py  train_baseline.sh
ecg-reconstruction/src/: config.py  evaluation.py  physics.py  utils.py
(+176 files in other folders)
